--- a/flexfit/src/Pages/Agenda.scss
+++ b/flexfit/src/Pages/Agenda.scss
@@ -1,5 +1,15 @@
 #Agenda {
 
+    header {
+        width: 100%;
+        height: 20%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        position: relative;
+        margin-bottom: 30px;
+    }
+
     .voltar {
         background: transparent;
         border: none;
