--- a/flexfit/src/Pages/Logar.scss
+++ b/flexfit/src/Pages/Logar.scss
@@ -27,7 +27,7 @@
         align-items: center;
     }
 
-    form input {
+    .formInput {
         background-color: transparent;
         border: none;
         border-bottom: 1px solid #ffffff;
