--- a/flexfit/src/Pages/Horarios.scss
+++ b/flexfit/src/Pages/Horarios.scss
@@ -88,7 +88,7 @@
 
 
     #muaythai {
-        background: url(../../assets/img/cross.png), lightgray 50% / cover no-repeat;
+        background: url(../../public/img/cross.png), lightgray 50% / cover no-repeat;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
