--- a/flexfit/src/Pages/Entrar.scss
+++ b/flexfit/src/Pages/Entrar.scss
@@ -1,10 +1,14 @@
 #Entrar {
+    padding: 0;
+    border: 0;
+
     header {
         width: 100%;
-        height: 20%;
+        height: 40%;
         display: flex;
         place-content: center;
-        margin-top: 100px;
+        padding-top: 100px;
+        background: #000000;
     }
 
     header p {
@@ -48,8 +52,14 @@
         height: 39px;
         flex-shrink: 0;
         border-radius: 89px;
-        background: #D9D9D9;
+        background: #fff;
+        border: 0;
+        color: #000;
         font-size: 20px;
         margin-bottom: 100px;
+    }
+
+    button a{
+        color: #000;
     }
 }
