--- a/flexfit/src/Pages/HomeAdm.scss
+++ b/flexfit/src/Pages/HomeAdm.scss
@@ -1,7 +1,6 @@
 #Tabela {
-
     header {
-        width: 100%;
+        width: 20%;
         height: 20%;
         display: flex;
         align-items: flex-end;
@@ -9,7 +8,6 @@
         position: relative;
         margin-bottom: 30px;
     }
-
     .voltar {
         background: transparent;
         border: none;
@@ -20,7 +18,6 @@
         margin-right: 25px;
         width: max-content;
     }
-
     header p {
         font-size: 35px;
         border-bottom: 2px solid #000000;
@@ -36,8 +33,8 @@
 
     }
 
-    main {
-        height: max-content;
+    .main {
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -45,6 +42,7 @@
         gap: 20px;
         background: #000000;
         border-radius: 25px 25px 0 0;
+        height: 100%;
     }
 
 
@@ -95,16 +93,6 @@
         flex-direction: column;
         justify-content: flex-end;
         padding: 20px;
-    }
-
-
-    footer {
-        height: 20%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        background-color: #000000;
-
     }
 
 }
