--- a/flexfit/src/Pages/HomeProf.module.css
+++ b/flexfit/src/Pages/HomeProf.module.css
@@ -36,8 +36,8 @@
 
     }
 
-    main {
-        height: max-content;
+    .main {
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -95,16 +95,6 @@
         flex-direction: column;
         justify-content: flex-end;
         padding: 20px;
-    }
-
-
-    footer {
-        height: 20%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        background-color: #000000;
-
     }
 
 }
