--- a/flexfit/src/Pages/Logar.scss
+++ b/flexfit/src/Pages/Logar.scss
@@ -25,6 +25,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 300px;
     }
 
     .formInput {
