--- a/flexfit/src/main.scss
+++ b/flexfit/src/main.scss
@@ -9,11 +9,14 @@
 html,
 body {
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #root {
     overflow: auto;
-
+    width: 100%;
+    height: 100%;
 }
 
 body {
@@ -32,6 +35,4 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 100px;
 }
